style: fix margin spacing

--- a/src/components/Movie.module.css
+++ b/src/components/Movie.module.css
@@ -12,4 +12,5 @@
 .movie > h3 {
   font-size: 2rem;
   color: #fff;
+  margin: 0;
 }
